// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/element/textarea should call passed callbacks 1`] = `
<textarea
  className="m-form__control--textarea"
  cols="50"
  id="textarea-callbacks"
  name="textarea-callbacks"
  onBlur={[MockFunction]}
  onChange={[MockFunction]}
  placeholder=""
  rows="4"
/>
`;

exports[`common/component/element/textarea should call passed callbacks 2`] = `
<textarea
  className="m-form__control--textarea"
  cols="50"
  id="textarea-callbacks"
  name="textarea-callbacks"
  onBlur={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onChange={[MockFunction]}
  placeholder=""
  rows="4"
/>
`;

exports[`common/component/element/textarea should call passed callbacks 3`] = `
<textarea
  className="m-form__control--textarea"
  cols="50"
  id="textarea-callbacks"
  name="textarea-callbacks"
  onBlur={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
  placeholder=""
  rows="4"
/>
`;

exports[`common/component/element/textarea should render correctly with default callbacks 1`] = `
<textarea
  aria-required={true}
  className="m-form__control--textarea textarea"
  cols="50"
  id="textarea"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test textarea placeholder"
  required={true}
  rows="4"
/>
`;

exports[`common/component/element/textarea should render correctly with default callbacks 2`] = `
<textarea
  aria-required={true}
  className="m-form__control--textarea textarea"
  cols="50"
  id="textarea"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test textarea placeholder"
  required={true}
  rows="4"
/>
`;

exports[`common/component/element/textarea should render correctly with default callbacks 3`] = `
<textarea
  aria-required={true}
  className="m-form__control--textarea textarea"
  cols="50"
  id="textarea"
  name="textarea"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test textarea placeholder"
  required={true}
  rows="4"
/>
`;
